--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic-settings = "^2.0.3"
 case-converter = "^1.1.0"
 toolz = "^0.12.0"
 dependency-injector = "^4.41.0"
+uvicorn = "^0.23.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
