--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,7 @@ jobs:
           poetry install
       - name: Check flake8
         run: |
-          poetry run flake8 todo --count --show-source --statistics
+          poetry run flake8 app --count --show-source --statistics
       - name: Check isort
         run: |
           poetry run isort ./ --check-only --verbose
