--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 count = True
 docstring-convention = google
-ignore = D100,D104,W503,PD015,D105,D107
+ignore = D100,D104,W503,PD015,D105,D107,I900  # TODO research
 inline-quotes = "
 max-line-length = 88
 show-source = True
