--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ flake8-builtins = "^1.5.3"
 flake8-black = "^0.3.2"
 flake8-requirements = "^1.5.3"
 pre-commit = "^3.5.0"
+httpx = "^0.25.0"
 
 [build-system]
 requires = ["poetry-core"]
